[package]
name = "rust-calendar"
version = "0.1.0"
author = ['Xerxes']
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
futures = "0.3.28"
tiberius = "0.12.2"
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
tokio = {version="1.29.1",features=["full"]}
tokio-stream = "0.1.14"
tokio-util = {version="0.7.8",features=["compat"]}
